| Summary: | ASTERISK-22009: Config framework does not handle reloading multiple config files correctly. | ||
| Reporter: | Richard Mudgett (rmudgett) | Labels: | Asterisk12 |
| Date Opened: | 2013-07-03 17:50:12 | Date Closed: | 2013-09-18 12:24:01 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Core/Configuration |
| Versions: | 12 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | The config framework does not deal with multiple config files as a source of config information during reloads correctly. It needs to reload all specified config files if any of them were touched. Otherwise it only partially loads the config.
This issue is to take care of the following: BUGBUG must fix config framework loading of multiple files. | ||
| Comments: | By: Richard Mudgett (rmudgett) 2013-08-15 13:03:23.494-0500 Changed associated BUGBUG comment to be tagged with: XXX ASTERISK-22009 | ||